bynkc/tests/fixtures/negative/146_adapter_consumes_context/src/tokens.karn
adapter tokens {
  consumes logging { Log }
}
